--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informações</title>
+    <title>CANECA DO GEEK</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -13,11 +13,8 @@
     </header>
     <main>
         <div class="contact-buttons">
-            <button onclick="window.location.href='mailto:recepcao1.manaus@bluetree.com.br'" target="_blank">
-                <i class="fas fa-envelope"></i>Email
-            </button>
-            <button onclick="window.location.href='tel:+559233032000'">
-                <i class="fas fa-phone"></i>Telefone
+            <button href='https://wa.me/5592988278251' target="_blank">
+                <i class="fa-brands fa-whatsapp"></i>Whatsapp
             </button>
         </div>
         <ul class="info-links">
@@ -31,7 +28,7 @@
             <li>
                 <img src="img/botton.png" alt="Imagem 2">
                 <div class="content">
-                    <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20bottons.%20Por%20favor,%20me%20envie%20mais%20informações." target="_blank">Bottom Personalizado</a>
+                    <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20bottons.%20Por%20favor,%20me%20envie%20mais%20informações." target="_blank">Bottons Personalizados</a>
                     <span class="subtitle"><i>Perfeitos para você</i></span>
                 </div>
             </li>
