--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src=".../img/logo.png" alt="logo">
+        <img class="logo" src="logo.png" alt="logo">
     </header>
     <main>
         <div class="contact-buttons">
