--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         </div>
         <ul class="info-links">
             <li>
-                <img src="img/caneca.png" alt="Imagem 1">
+                <img src="caneca.png" alt="Imagem 1">
                 <div class="content">
                     <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20canecas%20personalizadas." target="_blank">Canecas Personalizadas</a>
                     <span class="subtitle"><i>Escolha a sua arte</i></span>
                 </div>
             </li>
             <li>
-                <img src="img/botton.png" alt="Imagem 2">
+                <img src="botton.png" alt="Imagem 2">
                 <div class="content">
                     <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20bottons.%20Por%20favor,%20me%20envie%20mais%20informações." target="_blank">Bottons Personalizados</a>
                     <span class="subtitle"><i>Perfeitos para você</i></span>
