--- a/index.html
+++ b/index.html
@@ -14,17 +14,38 @@
     <main>
          <ul class="info-links">
             <li>
-                <img src="caneca.png" alt="Imagem 1">
+                <img src="caneca.png" alt="caneca">
                 <div class="content">
-                    <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20canecas%20personalizadas." target="_blank">Canecas Personalizadas</a>
+                    <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20canecas%20personalizadas." target="_blank">Canecas</a>
                     <span class="subtitle"><i>Escolha a sua arte</i></span>
                 </div>
             </li>
             <li>
-                <img src="botton.png" alt="Imagem 2">
+                <img src="botton.png" alt="botton">
                 <div class="content">
-                    <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20bottons.%20Por%20favor,%20me%20envie%20mais%20informações." target="_blank">Bottons Personalizados</a>
+                    <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20bottons.%20Por%20favor,%20me%20envie%20mais%20informações." target="_blank">Bottons</a>
                     <span class="subtitle"><i>Perfeitos para você</i></span>
+                </div>
+            </li>
+              <li>
+                <img src="camisa.png" alt="camisa">
+                <div class="content">
+                    <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20camisas%20personalizadas." target="_blank">Camisas</a>
+                    <span class="subtitle"><i>100% poliester</i></span>
+                </div>
+            </li>
+              <li>
+                <img src="mousepad.png" alt="mousepad">
+                <div class="content">
+                    <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20Mousepad%20personalizado." target="_blank">Mousepad</a>
+                    <span class="subtitle"><i>Escolha a sua arte</i></span>
+                </div>
+            </li>
+              <li>
+                <img src="sand.png" alt="sandalia">
+                <div class="content">
+                    <a href="https://wa.me/5592988278251?text=Olá!%20Gostaria%20de%20solicitar%20Sandálias%20personalizadas." target="_blank">Sandálias</a>
+                    <span class="subtitle"><i>Escolha a sua arte</i></span>
                 </div>
             </li>
         </ul>
